fixed margin, padding, alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -128,6 +128,10 @@ a:active {
   background: linear-gradient(#202124 70%, #000 90%);
 }
 
+.section-header {
+  margin: 0 3rem auto;
+}
+
 .section-projects,
 .section-header {
   position: relative;
@@ -138,7 +142,7 @@ a:active {
   content: "";
   display: block;
   width: 60%;
-  max-width: 20rem;
+  max-width: 40rem;
   height: 0.1rem;
   margin: 0 auto;
   background-color: #888888;
@@ -219,11 +223,6 @@ a:active {
   margin-top: 5rem;
 }
 
-.section-header h1,
-.section-header p {
-  margin-left: 3rem;
-}
-
 h1 {
   margin-bottom: 3rem;
 }
@@ -234,15 +233,13 @@ h1 {
 }
 
 .project-wrapper {
-  max-width: 70rem;
-  padding-left: 3rem;
   display: flex;
   flex-wrap: wrap;
   gap: 2rem;
 }
 
 .project {
-  max-width: 12rem;
+  max-width: 15rem;
   margin-bottom: 3rem;
   .project-categories {
     margin-bottom: 0.25rem;
@@ -325,11 +322,12 @@ h1 {
 
 .section-projects {
   padding-top: 4rem;
-  padding-bottom: 3rem;
+  padding-bottom: 5rem;
+  margin: 0 3rem auto;
 }
 
 .section-projects h2 {
-  padding: 0 0 2rem 3rem;
+  padding-bottom: 3rem;
 }
 
 .section-about {
@@ -347,24 +345,23 @@ h1 {
 /* 3 Desktop ==================== */
 
 @media (min-width: 50em) {
-  .site-main {
-    margin-left: 8rem;
-    margin-right: 8rem;
-  }
-  .section-projects {
-    max-width: 100rem;
-    margin: 0 auto;
+  .section-header,
+  .section-projects,
+  .section-about {
+    max-width: 80rem;
+    margin: 0 8rem auto;
   }
 
   .project-wrapper {
     gap: 2rem;
   }
 
+  .project {
+    max-width: 18rem;
+  }
+
   .section-about {
-    max-width: 80rem;
-    margin: 0 auto;
     padding-top: 5rem;
-    padding-left: 3rem;
     .section-about-box {
       max-width: 100rem;
       display: flex;
